# TinyPRC

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  auto_build.bash
conf/: photonrpc.xml  tinyrpc.xml
include/TinyRPC/common/: Config.h  ConsoleLogger.h
include/TinyRPC/net/: acceptor.h  channel.h  event_loop.h  poller.h  tcp_connection.h  tcp_server.h
include/TinyRPC/protocol/: add_service.pb.h  request.pb.h
include/TinyRPC/rpc/: rpc_server.h
include/photonrpc/: rpc.h
include/photonrpc/common/: config.h  logger.h
include/photonrpc/net/: buffer.h
protobuf/: rpc_message.proto
src/: CMakeLists.txt  main.cc  main.cpp
src/common/: Config.cpp  ConsoleLogger.cpp  config.cc  console_logger.cc  logger.cc
src/core/: CMakeLists.txt
src/core/common/: config.cc  config.h  logger.cc  logger.h
src/core/net/: acceptor.cc  acceptor.h  buffer.cc  buffer.h  channel.cc  channel.h  codec.h  event_loop.cc  event_loop.h  poller.cc  poller.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h
src/core/rpc/: rpc_channel.cc  rpc_channel.h  rpc_client.cc  rpc_client.h  rpc_message.pb.cc  rpc_message.pb.h  rpc_server.cc  rpc_server.h
src/net/: acceptor.cc  buffer.cc  channel.cc  event_loop.cc  poller.cc  tcp_connection.cc  tcp_server.cc
src/protocol/: add.pb.cc  add.pb.h  add.proto  add_service.pb.cc  add_service.proto  calculate_service.pb.cc  calculate_service.pb.h  calculate_service.proto  echo_service.pb.cc  echo_service.pb.h  echo_service.proto  request.pb.cc  request.proto
src/rpc/: rpc_channel.cc  rpc_server.cc
test/: CMakeLists.txt  benchmark.cc  consumer.cc  provider.cc  test_buffer.cc  test_client.cc  test_codec.cc  test_server.cc
test/integration_test/: integration_test.py
